--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -20,8 +20,7 @@ dotenvy = "0.15"
 reqwest = { version = "0.11", features = ["json"] }
 base64 = "0.21"
 # Redis Pub/Sub
-redis = { version = "0.24", features = ["aio", "tokio-comp"] }
-
+redis = { version = "0.27", features = ["aio", "tokio-comp", "tokio-native-tls-comp"] }
 # WebSocket
 futures = "0.3"
 
